# GRACE

./: .dockerignore  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  DESIGN.md  Dockerfile  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml  lint.yml  unity-build.yml
configs/: base.yaml  play.yaml
configs/env/: asymmetric_advantages.yaml  cramped_room.yaml  dummy.yaml
configs/llm/: mock.yaml  qwen3.6_35b.yaml  qwen3_8b.yaml  qwen3_thinking.yaml
configs/meta/: entropy.yaml  fixed_k10.yaml  fixed_k100.yaml  learned.yaml  never.yaml
configs/policy/: llm_augmented.yaml  ppo.yaml
docs/: REPRODUCIBILITY.md  UNITY_PARITY.md
docs/experiments/: 2026-05-week1.md
docs/prompts/: v1_baseline.md  (+1 more)
scripts/: eval.py  eval_transfer.py  jsonl_to_parquet.py  llm_hello.py  play_human.py  plot_results.py  probe_llm.py  run_h1.sh  run_h2.sh  run_h3.sh  sweep.py  train.py  train_bc.py  train_meta.py  verify_unity_parity.py
src/: __init__.py
tests/: test_bc.py  test_checkpoint.py  test_env_smoke.py  test_eval_runner.py  test_grpo.py  test_latency.py  test_llm_augmented.py  test_llm_cache.py  test_llm_mock.py  test_llm_parsers.py  test_meta_heuristic.py  test_meta_learned.py  test_metrics.py  test_ppo.py  test_ppo_trainer.py  test_prompt_v2.py  test_render_pygame.py  test_rollout.py  test_smoke.py  test_state_text.py  test_statistics.py  test_subgoal_validity.py  test_transfer.py  test_unity_env_import.py  test_unity_parity.py
unity_env/: .gitignore  ASSET_IMPORT.md  BUILD.md  GAME_DESIGN.md  NETWORK_SETUP.md  README.md  unity_env.slnx
(+152 files in other folders)
